# Pulse-Imaging-Engine

./: CMakeLists.txt  README.md  conanfile.txt
docs/: architecture.md
include/dicom_processor/: dataset.hpp  dictionary.hpp  parser.hpp  tag.hpp  vr.hpp
src/: dataset.cpp  dictionary.cpp  main.cpp  parser.cpp  vr.cpp
tools/: dcmtk_verify.cpp
